# libgrafcet

./: CMakeLists.txt  README.md  library.json
doc/: grafcet.dox
include/: ActionNode.h  Grafcet.h  Node.h  StateMachine.h  Static.h  Transition.h
src/: StateMachine.cpp  Static.cpp
test/: test.cpp
